[package]
	edition    = "2021"
	name       = "advent-utils"
	proc-macro = true
	version    = "0.1.0"
	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	advent-utils-macros = { path = "./advent-utils-macros" }

[workspace]
	members = ["advent-utils-macros"]
	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
