[package]
	edition    = { workspace = true }
	name       = "advent-utils"
	proc-macro = true
	version    = { workspace = true }
	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	advent-utils-macros = { path = "./advent-utils-macros" }
	anyhow              = "1.0.68"

[workspace]
	members = ["advent-utils-macros"]
	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

	[workspace.package]
		edition = "2021"
		version = "0.1.0"
