[package]
	edition = { workspace = true }
	name    = "advent-utils-macros"
	version = { workspace = true }

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	quote = "1.0.21"
	syn   = { version = "1.0.105", features = ["extra-traits", "full"] }

[lib]
	crate_type = ["proc-macro"]
